[package]
authors = ["Derrick van Zyl <derrick.vanzyl@gmail.com>"]
edition = "2018"
name = "dragon"
version = "0.1.0"

[dependencies]
bootloader = "0.9.5"
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.11.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.4"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"] 
test-success-exit-code = 33 # (0x10 << 1) | 1
